# golem

./: .gitignore  LICENSE  PLAN.html  PLAN.md  README.md  config.yaml  pyproject.toml  run.sh  setup.py
configs/: config.yaml  golem-2d-3d-plus-latent-boltzmann-mps.yaml  golem-2d-3d-plus-latent.yaml  golem-2d-latent-only.yaml  golem-2d-plus-latent.yaml  golem-2d.yaml  pretrain_openadmet.yaml
data/: examples.smi
data/openadmet/: train_test_smiles.smi
data/test-set/: expansion_data_test_full.csv
docs/: audit.html  documentation.html
experiments/: README.md
experiments/golem-2d-3d-plus-latent-public/: metrics.csv  pretrain_report.html  resolved_config.yaml
experiments/mt_pretrained/: predictions_log_scale.csv  training_history.csv
experiments/mt_random/: predictions_log_scale.csv  training_history.csv
experiments/pretrain/: README.md  pretrain_report.html
golem/: __init__.py  _version.py  _version_utils.py  cache.py  cli.py  config.py  conformers.py  descriptors.py  descriptors3d.py  ecfp_latent_alignment.py  geometry.py  isoforms.py  pretrain.py  rank_alignment.py  report.py  utils.py
notebooks/: CALIBRATE-MTME-0-reference.ipynb  compare_experiments.ipynb  finetune_mt_pretrained.ipynb  finetune_mt_random.ipynb  finetune_st_pretrained.ipynb  finetune_st_random.ipynb  inspect_isoforms.ipynb
scripts/: conformer_fallback_stats.py
tests/: test_boltzmann_3d.py  test_cli.py  test_conformers.py  test_descriptors.py  test_descriptors3d.py  test_ecfp_latent_alignment.py  test_isoforms.py  test_pretrain.py  test_report.py  test_version.py
(+17 files in other folders)
